[package]
name = "woox"
version = "0.1.0"
edition = "2021"

[dependencies]
tungstenite = { version = "0.24", features = ["rustls-tls-native-roots", "native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
url = "2"
ordered-float = "4.2"
